--- a/templates/visualCliente/padre_breadcrumbs.html
+++ b/templates/visualCliente/padre_breadcrumbs.html
@@ -5,7 +5,7 @@
 {% block pre_session %}
 <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs d-flex align-items-center"
-         style="background-image: url({{ config.ImagenBreadcrumbs.url }});">
+         style="background-image: url({% if config.ImagenBreadcrumbs %}{{ config.ImagenBreadcrumbs.url }}{% else %}'{% static 'img/breadcum_no_imagen.jpg' %}'{% endif %});">
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
         <h2>{{ lcp.getUltimoNombre }}</h2>
