--- a/templates/visualCliente/quienes_somos.html
+++ b/templates/visualCliente/quienes_somos.html
@@ -15,28 +15,15 @@
 
         <div class="row position-relative">
 
-          <div class="col-lg-7 about-img" style="background-image: url({% static 'plantillas/UpConstruction-1.0.0/assets/img/about.jpg' %});"></div>
+          <div class="col-lg-7 about-img" style="background-image: url({% if datos.Imagen %}{{datos.Imagen.url}}{% else %}'{% static 'img/quienessomos_no_imagen.jpg' %}'{% endif %});"></div>
 
           <div class="col-lg-7">
-            <h2>Consequatur eius et magnam</h2>
+            <h2>{{datos.Titulo}}</h2>
             <div class="our-story">
-              <h4>Est 1988</h4>
-              <h3>Our Story</h3>
-              <p>Inventore aliquam beatae at et id alias. Ipsa dolores amet consequuntur minima quia maxime autem.
-                Quidem id sed ratione. Tenetur provident autem in reiciendis rerum at dolor. Aliquam consectetur
-                laudantium temporibus dicta minus dolor.</p>
-              <ul>
-                <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commo</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
-              </ul>
-              <p>Vitae autem velit excepturi fugit. Animi ad non. Eligendi et non nesciunt suscipit repellendus porro in
-                quo eveniet. Molestias in maxime doloremque.</p>
+              <h4>{{datos.SubTitulo}}</h4>
+<!--              <h3>Our Story</h3>-->
+              <p>{{datos.Descripcion|safe}}</p>
 
-              <div class="watch-video d-flex align-items-center position-relative">
-                <i class="bi bi-play-circle"></i>
-                <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox stretched-link">Watch Video</a>
-              </div>
             </div>
           </div>
 
@@ -45,6 +32,101 @@
       </div>
     </section>
     <!-- End About Section -->
+
+  <!-- ======= Stats Counter Section ======= -->
+    <section id="stats-counter" class="stats-counter section-bg">
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-3 col-md-6">
+            <div class="stats-item d-flex align-items-center w-100 h-100">
+              <i class="bi bi-emoji-smile color-blue flex-shrink-0"></i>
+              <div>
+                <span data-purecounter-start="0" data-purecounter-end="{{ cantidad_insitituciones_productivas }}"
+                      data-purecounter-duration="1"
+                  class="purecounter"></span>
+                <p>Instituciones Productivas</p>
+              </div>
+            </div>
+          </div><!-- End Stats Item -->
+
+          <div class="col-lg-3 col-md-6">
+            <div class="stats-item d-flex align-items-center w-100 h-100">
+              <i class="bi bi-journal-richtext color-orange flex-shrink-0"></i>
+              <div>
+                <span data-purecounter-start="0" data-purecounter-end="{{ cantidad_productos }}" data-purecounter-duration="1"
+                  class="purecounter"></span>
+                <p>Productos</p>
+              </div>
+            </div>
+          </div><!-- End Stats Item -->
+
+          <div class="col-lg-3 col-md-6">
+            <div class="stats-item d-flex align-items-center w-100 h-100">
+              <i class="bi bi-headset color-green flex-shrink-0"></i>
+              <div>
+                <span data-purecounter-start="0" data-purecounter-end="{{ cantidad_insitituciones_cientificas }}" data-purecounter-duration="1"
+                  class="purecounter"></span>
+                <p>Instituciones Científicas </p>
+              </div>
+            </div>
+          </div><!-- End Stats Item -->
+
+          <div class="col-lg-3 col-md-6">
+            <div class="stats-item d-flex align-items-center w-100 h-100">
+              <i class="bi bi-people color-pink flex-shrink-0"></i>
+              <div>
+                <span data-purecounter-start="0" data-purecounter-end="{{cantidad_tecnologias}}" data-purecounter-duration="1"
+                  class="purecounter"></span>
+                <p>Tecnologías </p>
+              </div>
+            </div>
+          </div><!-- End Stats Item -->
+
+        </div>
+
+      </div>
+    </section><!-- End Stats Counter Section -->
+
+<!-- ======= Our Team Section ======= -->
+    <section id="team" class="team">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-header">
+          <h2>Nuestro Equipo</h2>
+          <p>{{datos.DescripcionNuestroEquipo|safe}}</p>
+        </div>
+
+        <div class="row gy-5">
+          {% for integrante in datos.integrante_set.all %}
+
+            <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="100">
+            <div class="member-img">
+              <img src="{% if integrante.Imagen %}{{integrante.Imagen.url}}{% else %}{% static 'img/integrante_no_imagen.jpg' %}{% endif %}"
+                   class="img-fluid" alt="">
+<!--              <div class="social">-->
+<!--                <a href="#"><i class="bi bi-twitter"></i></a>-->
+<!--                <a href="#"><i class="bi bi-facebook"></i></a>-->
+<!--                <a href="#"><i class="bi bi-instagram"></i></a>-->
+<!--                <a href="#"><i class="bi bi-linkedin"></i></a>-->
+<!--              </div>-->
+            </div>
+            <div class="member-info text-center">
+              <h4>{{integrante.Nombre}}</h4>
+              <span>{{integrante.Categoria}}</span>
+              <p>{{integrante.Descripcion|safe}}</p>
+            </div>
+          </div><!-- End Team Member -->
+
+
+          {% endfor %}
+
+
+        </div>
+
+      </div>
+    </section><!-- End Our Team Section -->
 
 {% endblock%}
 
