--- a/templates/INSTITUCIONES_PRODUCTIVAS/institucionproductiva_detail.html
+++ b/templates/INSTITUCIONES_PRODUCTIVAS/institucionproductiva_detail.html
@@ -129,7 +129,10 @@
                 <ul class="mt-3">
 
                   <li><i class="bi bi-back"></i><b> Tipo:</b> {{object.tipoDeInstitucionProductiva.nombre}}<br/></li>
+                  {% if object.TieneAlamacenConRefrigeracion %}
                   <li><i class="bi bi-thermometer-snow"></i><b> Refrigeración:</b> {{object.capacidadDeRefrigeracion}}<br/></li>
+                  {% endif %}
+                  <li><i class="bi bi-box"></i><b> Capacidad de Productos:</b> {{object.capacidadDeProductos}}<br/></li>
 
               </ul>
               </div>
