--- a/templates/INSTITUCIONES_CIENTIFICAS/especie_list.html
+++ b/templates/INSTITUCIONES_CIENTIFICAS/especie_list.html
@@ -7,15 +7,15 @@
 
 
 
-{% block option_campos_select_filtros %}
-<option value="nombreCientifico">Científico</option>
-<option value="nombreComun">Común</option>
-<option value="tipoDeEspecie">Tipo</option>
-<!--<option value="especie_nombreComun">Especie</option>-->
-<!--<option value="especie_nombreCientifico">Especie Nombre Científico </option>  Nombre Común-->
-<!--<option value="especie_tipoDeEspecie">Tipo de Especie</option>-->
-
-{% endblock%}
+{#{% block option_campos_select_filtros %}#}
+{#<option value="nombreCientifico">Científico</option>#}
+{#<option value="nombreComun">Común</option>#}
+{#<option value="tipoDeEspecie">Tipo</option>#}
+{#<!--<option value="especie_nombreComun">Especie</option>-->#}
+{#<!--<option value="especie_nombreCientifico">Especie Nombre Científico </option>  Nombre Común-->#}
+{#<!--<option value="especie_tipoDeEspecie">Tipo de Especie</option>-->#}
+{##}
+{#{% endblock%}#}
 
 
 {% block contenido_lista %}
@@ -63,7 +63,20 @@
 
 
 {% empty %}
- <span>No se encontraron resultados.</span>
+    <section id="about" class="about   w-100 ">
+      <div class="container" data-aos="fade-up">
+
+
+        <div class="row position-relative  ">
+
+                  <div class="col text-center" >
+                      <h1><b>No se encontraron resultados.</b></h1>
+                  </div>
+        </div>
+      </div>
+    </section>
+
+
 
 
 {% endfor %}
@@ -71,60 +84,17 @@
 {% endblock%}
 
 
-{% block scripts_extras %}
+{% block scripts_datos_filtros %}
+
+
+    FT.addT("nombreCientifico","Científico");
+    FT.addT("nombreComun","Común");
+
+    FT.addP([
+        ["animal","Animal"]
+    ,["vegetal","Vegetal"]
+        ],"tipoDeEspecie","Tipo")
 
 
 {% endblock%}
 
-
-<!--<html xmlns="http://www.w3.org/1999/xhtml">-->
-<!--<head>-->
-<!--    <title></title>-->
-<!--</head>-->
-<!--<body>-->
-<!--    va a mostrar las palntillas <br />-->
-<!--    <form method="get">-->
-<!--        {% csrf_token %}-->
-<!--        <input type="text" name="q" placeholder="Buscar...">-->
-<!--        <select name="campo">-->
-<!--            <option value="Nombre">Nombre</option>-->
-<!--            <option value="NombreAbreviado">Abreviado</option>-->
-<!--        </select>-->
-<!--        <button type="submit">Buscar</button>-->
-<!--    </form>-->
-<!--     <form method="get" action="/reporte_institucion_productiva_pdf/">-->
-<!--        {% csrf_token %}-->
-<!--         {% if 'q' in request.GET and 'campo' in request.GET %}-->
-<!--        <input type="hidden" name="campo" value="{{request.GET.campo}}">-->
-<!--         <input type="hidden" name="q" value="{{request.GET.q}}">-->
-<!--         {% endif %}-->
-<!--        <button type="submit">Reporte pdf</button>-->
-<!--    </form>-->
-<!--    <br />-->
-<!--    {% for v in object_list %}-->
-<!--    {{v.Nombre}} -&#45;&#45; {{v.NombreAbreviado}} -->
-<!--    <a href="/instituciones_productivas/findById/{{v.id}}">ver libro</a> <br />-->
-
-<!--    {% empty %}-->
-<!--    <span>No se encontraron resultados.</span>-->
-
-
-<!--    {% endfor %}-->
-
-<!--    {% if is_paginated %}-->
-<!--    <div class="pagination">-->
-<!--        <span class="page-links">-->
-<!--            {% if page_obj.has_previous %}-->
-<!--            <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}{% if 'q' in request.GET and 'campo' in request.GET %}&campo={{ request.GET.campo }}&q={{ request.GET.q }}{% endif %}">previous</a>-->
-<!--            {% endif %}-->
-<!--            <span class="page-current">-->
-<!--                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.-->
-<!--            </span>-->
-<!--            {% if page_obj.has_next %}-->
-<!--            <a href="{{ request.path }}?page={{ page_obj.next_page_number }}{% if 'q' in request.GET and 'campo' in request.GET %}&campo={{ request.GET.campo }}&q={{ request.GET.q }}{% endif %}">next</a>-->
-<!--            {% endif %}-->
-<!--        </span>-->
-<!--    </div>-->
-<!--    {% endif %}-->
-<!--</body>-->
-<!--</html>-->
