--- a/templates/INSTITUCIONES_PRODUCTIVAS/institucionproductiva_detail.html
+++ b/templates/INSTITUCIONES_PRODUCTIVAS/institucionproductiva_detail.html
@@ -1,4 +1,4 @@
-{% extends "visualCliente/padre_breadcrumbs.html" %}
+{% extends "visualCliente/con_mapa_provincia.html" %}
 {% load static %}
 
 {% block titulo %}
@@ -103,6 +103,11 @@
 
               <div class="sidebar-item categories">
                 <h3 class="sidebar-title">Ubicación</h3>
+                   <div class="mt-3" id="chartdiv" style="
+                width: 100%;
+            height: 100px;">
+
+                </div>
                 <ul class="mt-3">
                   <li><i class="bi bi-signpost"></i><b> Provicia:</b> {{object.provincia.nombre}}<br/></li>
                     <li><i class="bi bi-signpost"></i><b> Municipio:</b> {{object.municipio.nombre}}<br/></li>
