--- a/templates/visualCliente/padre.html
+++ b/templates/visualCliente/padre.html
@@ -85,7 +85,7 @@
 
 
 
-          <li><a href="{% url 'mapa' %}">Mapa</a></li>
+{#          <li><a href="{% url 'mapa' %}">Mapa</a></li>#}
 
 
           <li><a href="/admin/">Administración</a></li>
@@ -137,7 +137,7 @@
                 <li><a href="{% url 'home' %}">Principal</a></li>
           <li><a href="{% url 'quienes_somos' %}">Quienes Somos</a></li>
                 <li><a href="{% url 'galeria' %}">Galeria</a></li>
-          <li><a href="{% url 'mapa' %}">Mapa</a></li>
+{#          <li><a href="{% url 'mapa' %}">Mapa</a></li>#}
               <li><a href="/admin/">Administración</a></li>
 
 
@@ -166,58 +166,9 @@
             </ul>
           </div>
 
-{#          <div class="col-lg-2 col-md-3 footer-links">#}
-{#            <h4>Our Services</h4>#}
-{#            <ul>#}
-{#              <li><a href="#">Web Design</a></li>#}
-{#              <li><a href="#">Web Development</a></li>#}
-{#              <li><a href="#">Product Management</a></li>#}
-{#              <li><a href="#">Marketing</a></li>#}
-{#              <li><a href="#">Graphic Design</a></li>#}
-{#            </ul>#}
-{#          </div><!-- End footer links column-->#}
-{##}
-{#          <div class="col-lg-2 col-md-3 footer-links">#}
-{#            <h4>Hic solutasetp</h4>#}
-{#            <ul>#}
-{#              <li><a href="#">Molestiae accusamus iure</a></li>#}
-{#              <li><a href="#">Excepturi dignissimos</a></li>#}
-{#              <li><a href="#">Suscipit distinctio</a></li>#}
-{#              <li><a href="#">Dilecta</a></li>#}
-{#              <li><a href="#">Sit quas consectetur</a></li>#}
-{#            </ul>#}
-{#          </div><!-- End footer links column-->#}
-{##}
-{#          <div class="col-lg-2 col-md-3 footer-links">#}
-{#            <h4>Nobis illum</h4>#}
-{#            <ul>#}
-{#              <li><a href="#">Ipsam</a></li>#}
-{#              <li><a href="#">Laudantium dolorum</a></li>#}
-{#              <li><a href="#">Dinera</a></li>#}
-{#              <li><a href="#">Trodelas</a></li>#}
-{#              <li><a href="#">Flexo</a></li>#}
-{#            </ul>#}
-{#          </div><!-- End footer links column-->#}
-
         </div>
       </div>
     </div>
-{##}
-{#    <div class="footer-legal text-center position-relative">#}
-{#      <div class="container">#}
-{#        <div class="copyright">#}
-{#          &copy; Copyright <strong><span>UpConstruction</span></strong>. All Rights Reserved#}
-{#        </div>#}
-{#        <div class="credits">#}
-{#          <!-- All the links in the footer should remain intact. -->#}
-{#          <!-- You can delete the links only if you purchased the pro version. -->#}
-{#          <!-- Licensing information: https://bootstrapmade.com/license/ -->#}
-{#          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/ -->#}
-{#          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a#}
-{#            href="https://themewagon.com">ThemeWagon</a>#}
-{#        </div>#}
-{#      </div>#}
-{#    </div>#}
 
 
   </footer>
@@ -241,4 +192,5 @@
   <script src="{% static 'plantillas/UpConstruction-1.0.0/assets/js/main.js' %}"></script>
 
 {% block scripts_extras %}{% endblock%}
+{% block scripts_extras_dos %}{% endblock%}
 </body>
